# CBOM

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
cbom_scanner/: __init__.py  cli.py
cbom_scanner/core/: models.py  normalizer.py  options.py  rules.py  utils.py
cbom_scanner/formats/: cbom.py  cyclonedx.py
cbom_scanner/rules/: c.yaml  csharp.yaml  go.yaml  java.yaml  node.yaml  python.yaml  rust.yaml
cbom_scanner/scanners/: __init__.py  base.py  common.py  csharp.py  node.py  python.py  rust.py
dashboard/: index.html  package-lock.json  package.json  tsconfig.json
dashboard/public/: sample.json
dashboard/src/: App.tsx  styles.css
dashboard/src/dashboard/: DashboardPage.tsx
docs/: cbomkit_study.md  coverage_gap_analysis.md  coverage_improvements_report.md
reports/: cryptosamples_cbom.json
src/cbom_scanner/: __main__.py  cli.py
src/cbom_scanner/core/: __init__.py  normalizer.py  orchestrator.py  rules.py  utils.py
src/cbom_scanner/formats/: cbom.py  cyclonedx.py
src/cbom_scanner/rules/: c.yaml  csharp.yaml  go.yaml  java.yaml  node.yaml  python.yaml  rust.yaml
src/cbom_scanner/scanners/: c.py  common.py  go.py  java.py  python.py
src/cbom_scanner/schemas/: cbom.schema.json
testdata/crypto_zoo/c/: openssl_sample.c
testdata/crypto_zoo/go/: go_sample.go
testdata/crypto_zoo/node/: node_sample.js
tests/: conftest.py  test_coverage_improvements.py  test_scanner.py
tests/fixtures/crypto_zoo/: CSharpSample.cs  JavaSample.java  go_sample.go  node_sample.js  openssl_sample.c  python_sample.py  rust_sample.rs
(+6 files in other folders)
