[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cbom-scanner"
version = "0.1.0"
description = "Multi-language CBOM scanner"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.package-data]
cbom_scanner = ["rules/*.yaml", "schemas/*.json"]
